# Structure-from-Motion-3D-Reconstruction

./: README.md  config.json
cpp/: CMakeLists.txt  README.md  README_REPO.md
cpp/include/: dense.hpp  linalg.hpp  minijson.hpp  pgm_io.hpp  so3.hpp
cpp/src/: templering_sfm.cpp
cpp/tools/: ate_keyframes.cpp  ate_two_frames.cpp  convert_templering_png_to_pgm.py  gt_keyframe_edge.cpp
docs/: README.md  algorithm_overview.md  benchmark_report.md  features_cpp.md  features_python.md  sfm_code_aligned_explanation.tex
python/: README.md  requirements.txt
python/src/: templering_sfm.py
samples/: README.md
samples/cpp/: posegraph_edges.csv
samples/python/: keyframes_camera_centers.csv  templeRing_sparse_points.ply
